{
    "name": "Controls",
    "maps": [
        {
            "name": "InGame",
            "id": "af89a6d8-06a9-43a6-8ef1-54a218216a33",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "daca5b6c-a432-412b-84d0-1ecdf8ddc1df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "20964a13-001d-40b9-a246-769561c710ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Refill",
                    "type": "Button",
                    "id": "d9ea005f-cb89-4bcf-bba7-8ec2c9903524",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSwitch",
                    "type": "Button",
                    "id": "abf3d419-7615-40fb-a9b0-5b3b1a2f6795",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnumSwitch",
                    "type": "Button",
                    "id": "dc227afa-8ed8-4e65-99c1-63efa24bb756",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6795d53b-4c77-4c2a-996f-1b08db15dd57",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad7ed93c-4ce2-4a3a-ba7b-1d2f48346994",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "409f122c-601f-4e43-a358-65d3698c9cb2",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Refill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc63dc66-92c2-41a8-95da-691cd813d9db",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d027e96-40d5-425f-8ec2-1c82e22b96eb",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnumSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Permenanet",
            "id": "8a05f712-4fac-43bf-82ab-5cb828d08c7b",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "PassThrough",
                    "id": "60539386-db1f-4c0d-81f0-651d7745845d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "29d64221-5988-4e23-8285-35d1a567aa09",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}